# rust-news-letter-server

./: .env  Cargo.toml  Dockerfile  README.md
configuration/: base.yaml
migrations/: 20250112042751_create_subscriptions_table.sql
scripts/: curl_post.sh  init_db.sh  subscribe2.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
